# qpay-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: auth.rs  client.rs  config.rs  ebarimt.rs  error.rs  invoice.rs  lib.rs  models.rs  payment.rs
tests/: client_test.rs  config_test.rs  error_test.rs  models_test.rs
