[package]
name = "qpay"
version = "1.0.0"
edition = "2021"
description = "QPay V2 API SDK for Rust"
license = "MIT"
repository = "https://github.com/qpay-sdk/qpay-rust"
homepage = "https://github.com/qpay-sdk/qpay-rust"
documentation = "https://docs.rs/qpay"
readme = "README.md"
keywords = ["qpay", "payment", "mongolia", "invoice", "fintech"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"

[dev-dependencies]
mockito = "1"
serial_test = "3"
tokio = { version = "1", features = ["full", "test-util"] }
